fix syntax highlighting css overflow issue

--- a/_sass/highlight.scss
+++ b/_sass/highlight.scss
@@ -1,5 +1,5 @@
 /* Syntax highlighting styles */
-.highlight {
+pre.highlight {
   min-width: 110%;
   max-width: 110%;
   margin-left: -5%;
